# College-Football-Fantasy-App

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE_AUDIT.md  Dockerfile.api  Dockerfile.e2e  Dockerfile.web  Makefile  README.md  deployments.yaml  docker-compose.yml  llm.txt  pyproject.toml  sitecustomize.py
api/: alembic.ini  sitecustomize.py
collegefootballfantasy_api/: __init__.py
collegefootballfantasy_ui/: __init__.py
docs/: DEPLOYMENT_RUNBOOK.md  MANUAL_SMOKE_TEST.md  OPERATIONS_RUNBOOK.md  PUBLIC_LAUNCH_CHECKLIST.md  RELEASE_READINESS.md  SCORING_PRODUCTION_RUNBOOK.md  SINGLE_PLAYER_MOCK_DRAFT_MANUAL_TEST 2.md  draft-room.md  espn_college_football_ingestion.md  feature-map.md  frontend-ux.md  launch-readiness-checklist.md  operations-runbook.md  player-seed-research-prompt.md  pr-split-recovery-plan.md  scoring.md  testing-ci.md
fixtures/: roster_legality_cases.json
requirements/: 01_epic_ux_v1.md  02_feature_league_creation_and_configuration.md  03_feature_team_creation_and_management.md  04_feature_draft_flow.md  05_feature_roster_management.md  06_feature_player_search_and_profiles.md  07_feature_matchup_view.md  08_feature_league_standings_and_records.md  09_feature_ui_look_and_feel.md  10_feature_frontend_architecture_consolidation.md  11_feature_backend_contract_and_access_hardening.md  12_epic_react_frontend_delivery.md  13_feature_jwt_session_and_refresh_hardening.md  14_feature_sportsdata_cfb_integration_and_cache.md  15_feature_end_to_end_and_contract_test_coverage.md  17_epic_college_football_ui_redesign.md  (+12 more)
ui/: app.py  (+1 more)
(+879 files in other folders)
